[gd_scene load_steps=2 format=3 uid="uid://058ddaleep5x"]

[ext_resource type="Script" path="res://Game/Enemy/enemy_spawner_SURVIVAL.gd" id="1_dwhex"]

[node name="EnemySpawnerSURVIVAL" type="Node2D"]
script = ExtResource("1_dwhex")

[node name="RandomTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="SpawnCoolDown" type="Timer" parent="."]
wait_time = 2.0

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="SpawnerCD" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Lasers" type="Node" parent="."]

[connection signal="timeout" from="RandomTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="SpawnCoolDown" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="WaveTimer" to="." method="_on_wave_timer_timeout"]
[connection signal="timeout" from="SpawnerCD" to="." method="_on_spawner_cd_timeout"]
